--- a/Project_1.Rmd
+++ b/Project_1.Rmd
@@ -7,24 +7,67 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(ggplot2)
+library(ISLR)
+library(readxl)
+library(tidyverse)
+library(resampledata)
+library(knitr)
+library(dplyr)
+library(moderndive)
+library(gapminder)
+library(skimr)
+library(car)
+library(MASS)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+Housing <- read_excel("Housing.xlsx")
+skim(Housing)
 ```
 
-## Including Plots
+```{r}
+pairs(~Housing$price+Housing$size+Housing$lot+Housing$bath+Housing$bedrooms+Housing$yearbuilt+Housing$agestandardized+Housing$garagesize)
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+Housing %>%
+  select(price,size,lot,bath,bedrooms,yearbuilt,agestandardized,garagesize) %>%
+  cor()
+
+```
+
+
+```{r}
+Housing_model1_everything<-lm(price~.,data=Housing)
+summary(Housing_model1_everything)
+```
+taking out id variable die to it not being relevant to the model.  age standardized is an odd variable
+
+
+```{r}
+Housing_model2<-lm(price~.-id,data=Housing)
+summary(Housing_model2)
+```
+Taking out yearbuilt die to having largest probability of not being significant
+```{r}
+Housing_model3<-lm(price~.-id-yearbuilt,data=Housing)
+summary(Housing_model3)
+```
+Age standardized is now working as a predictor. Removing bath die to being insignificant
+```{r}
+Housing_model4<-lm(price~.-id-yearbuilt-bath,data=Housing)
+summary(Housing_model4)
+```
+
+Removing garage size due to being insignificant predictor
+```{r}
+Housing_model5<-lm(price~.-id-yearbuilt-bath-garagesize,data=Housing)
+summary(Housing_model5)
+```
+Status and neighborhoods some are significant values while others are not. leaving the variables in for now.
+
+
+
+
