--- a/Project 1 final.Rmd
+++ b/Project 1 final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Project 1 final"
-author: "Daniel Short"
+author: "Grace Rogers and Daniel Short"
 date: "4/2/2020"
 output: html_document
 ---
